<resources>

    <string name="app_name">SeizeDay</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SeizeDay</string>
    
    <string name="Add" >Add</string>
    
	<string name="button_text">Add new component</string>
	<string name="button_text_weather">Weather component</string>
	<string name="button_text_cancel">Cancel</string>
	<string name="set_alarm">Set Alarm</string>
	<string name="close">Close</string>
	<string name="trash">Trash</string>
	<string name="button_text_news">News component</string>
	<string name="button_text_aphorism">Aphorism component</string>
	<string name="task_manager">Task Manager</string>
	<string name="off_alarm">Off alarm</string>
	<string name="remove">Remove</string>
	<string name="task">Task to do</string>
	<string name="news">News</string>
	<string name="aphorism">Aphorism</string>

</resources>