<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<Button
		android:id="@+id/button_weather"
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
        android:text="@string/button_text_weather" 

	/>
	
	<Button
		android:id="@+id/button_news"
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
        android:text="@string/button_text_news" 
        android:onClick="newsClicked"

	/>
	
	<Button
		android:id="@+id/button_aphorism"
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
        android:text="@string/button_text_aphorism" 
        android:onClick="aphorismClicked"

	/>

	<Button
	    android:id="@+id/button_cancel"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:onClick="buttonPressed"
	    android:text="@string/button_text_cancel" 
	    android:layout_marginTop="200dp" />

</LinearLayout>
