<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp" 
    android:background="@drawable/backgorund"
    android:id="@+id/layout"
    >

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="bOffAlaemPressed" 
        />

    <TextView
        android:id="@+id/textTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analogClock1"
        android:text="@string/task"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <ListView
        android:id="@+id/listTask"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textTask">
    </ListView>
    
    <TextView
        android:id="@+id/textNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listTask"
        android:text="@string/news"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ListView
        android:id="@+id/listNews"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textNews" >
    </ListView>
    
    <TextView
        android:id="@+id/textAphorism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listNews"
        android:text="@string/aphorism"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listAphorism"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textAphorism" >
    </ListView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/analogClock1"
        android:layout_toRightOf="@+id/analogClock1"
        android:text="@string/off_alarm" 
        android:onClick="bOffAlaemPressed"
        />



</RelativeLayout>